# nyc_311

./: .gitignore  README.md  pyproject.toml  requirements.txt
Notebooks/: 01_data_loading_cleaning.ipynb  01_data_loading_sampling_eda.ipynb  02_feature_engineering.ipynb  03_eda.ipynb  03_eda_and_model_training.ipynb  Notebook0_Downloading_Data.ipynb  Notebook1_Data_Ingestion.ipynb
Scripts/: combine chunks.py
src/: load_data.py
