[project]
name = "uptimal-test"
version = "0.1.0"
description = ""
authors = [
    {name = "Rony Raffoul",email = "ronyraffoul21@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "polars (>=1.24.0,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pyarrow (>=19.0.1,<20.0.0)",
    "sodapy (>=2.2.0,<3.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "category-encoders (>=2.8.1,<3.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "holidays (>=0.69,<0.70)",
    "plotly (>=6.0.1,<7.0.0)",
    "xgboost (>=3.0.0,<4.0.0)",
    "dask (>=2025.3.0,<2026.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "optuna (>=4.2.1,<5.0.0)",
    "optuna-integration[xgboost] (>=4.2.1,<5.0.0)",
    "h11 (>=0.16.0,<0.17.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
